--- a/frontend/src/components/Enseignant/Evaluation.css
+++ b/frontend/src/components/Enseignant/Evaluation.css
@@ -76,7 +76,7 @@ margin-right: 150px;
 }
 
 .generate-button {
-  
+  margin-bottom: 25px;
   padding: 0.75rem 1.5rem;
   background: #3b82f6;
   color: #ffffff;
